sound: Move running input streams when default source is changed

When changing the default input source, active recording streams
are not moved. This patch will fix that, which will make input
and output behaviour consistent.

As a bonus, it will not destroy pulseaudio's input database when
changing default sink anymore.

https://bugzilla.gnome.org/show_bug.cgi?id=674925